[gd_scene load_steps=4 format=4 uid="uid://vjoytf5ho72h"]

[ext_resource type="PackedScene" uid="uid://nx2prtbxim66" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogPopup.tscn" id="1"]
[ext_resource type="Script" uid="uid://c15c61fq4awuu" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogBoxBattleFail/DialogBoxBattleFail.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="3"]

[node name="DialogBoxBattleFail" instance=ExtResource("1")]
script = ExtResource("2")

[node name="TextLabel" parent="Layer/Control/MarginContainer2/MarginContainer/CenterContainer" index="0"]
text = "[center]游戏结束[/center]"

[node name="ButtonContainer" parent="Layer/Control" index="1"]
offset_left = -177.0
offset_top = 6.01601
offset_right = 171.0
offset_bottom = 52.016

[node name="RestartButton" parent="Layer/Control/ButtonContainer" index="0" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "再试一次"

[node name="BackButton" parent="Layer/Control/ButtonContainer" index="1" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "返回菜单"

[connection signal="pressed" from="Layer/Control/ButtonContainer/RestartButton" to="." method="RestartButtonPressed"]
[connection signal="pressed" from="Layer/Control/ButtonContainer/BackButton" to="." method="BackButtonPressed"]
